<resources>
    <string name="app_name">lelangOnline</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="login_success">login success</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="change_country">Change Country</string>
    <string name="top_news">Top News</string>
    <string name="can_t_get_data_check_your_internet_connection_and">Can\'t get data, check your internet connection and</string>
    <string name="try_again">Try Again</string>
    <string name="flagImage">flagImage</string>
    <string name="image_not_found">Image Not Found!</string>
    <string name="saved_articles">Saved Articles</string>
    <string name="category_articles">Category</string>
    <string name="articles_search">Articles Search</string>
    <string name="type_search_keyword">Ketikkan kata kunci pencarian..</string>
    <string name="you_didn_t_save_any_article_yet">You didn\'t save any article yet.</string>

    <!--Login Validation-->
    <string name="invalid_email_password">Please provide a valid email and password.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--    string fedding-call-->
    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">REQUESTS</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="sender_badge" translatable="false">SENDER</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">REQUEST</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="avatart">avatarImage</string>
    <string name="rp_999_999_999">Rp. 999.999.999</string>
    <string name="saldo">Saldo</string>
    <string name="tarik">Tarik</string>
    <string name="riwayat">riwayat</string>
    <string name="setor">Setor</string>
    <string name="tanggal">Tanggal</string>
    <string name="jumlah">Jumlah</string>
    <string name="keterangan">Keterangan</string>
    <string name="tidak_ada_riwayat">Tidak ada riwayat</string>
    <string name="daftar_barang_lelang">Daftar Barang Lelang</string>
    <string name="login">MASUK</string>
    <string name="email">Email</string>

</resources>
