<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <data>
            <variable
                name="avatarUrl1"
                type="String" />
            <variable
                name="reqManager1"
                type="com.bumptech.glide.RequestManager" />
        </data>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:visibility="gone"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:shapeAppearance="@style/ShapeAppearance.CardInfo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <!-- LEFT TITLE PART -->
                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    loadImage="@{avatarUrl1}"
                    reqManager="@{reqManager1}"
                    android:layout_weight="4"
                    android:contentDescription="@string/avatart"/>

                <!-- RIGHT TITLE PART -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:paddingBottom="0dp"
                    android:paddingEnd="0dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:paddingStart="0dp"
                    android:paddingTop="0dp">

                <ImageView
                    android:id="@+id/title_from_to_dots"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/from_to_purple" />

                <TextView
                    android:id="@+id/setor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/title_from_to_dots"
                    android:layout_marginStart="20dp"
                    android:text="@string/setor"
                    android:layout_toEndOf="@+id/title_from_to_dots"
                    android:ellipsize="marquee"
                    android:textStyle="bold"
                    android:fadingEdge="horizontal"
                    android:singleLine="true"
                    android:textColor="#99000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tarik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="31dp"
                    android:layout_toEndOf="@id/setor"
                    android:text="@string/tarik"
                    android:textColor="#99000000"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/saldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="31dp"
                    android:layout_toEndOf="@id/tarik"
                    android:text="@string/saldo"
                    android:textColor="#99000000"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/jmlh_saldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_below="@+id/saldo"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/TarikImg"
                    android:text="@string/rp_999_999_999"
                    android:textSize="14sp"
                    android:textColor="#99000000"
                    android:textStyle="bold"/>

                <ImageButton
                    android:id="@+id/setorImg"
                    android:layout_width="43dp"
                    android:layout_height="43dp"
                    android:layout_below="@+id/setor"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/title_from_to_dots"
                    android:background="@drawable/wallet_1" />

                    <ImageView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_toEndOf="@id/setorImg"
                        android:layout_marginStart="10dp"
                        android:src="@color/contentDividerLine" />

                    <ImageButton
                    android:id="@+id/TarikImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tarik"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/setorImg"
                    android:background="@drawable/credit_card" />

                <LinearLayout
                    android:id="@+id/openCell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/jmlh_saldo"
                    android:layout_marginTop="25dp"
                    android:layout_toEndOf="@id/TarikImg"
                    android:layout_marginStart="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ED000000"
                        android:text="@string/riwayat"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/down_arrow"/>
                </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="6dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="9dp">

                <!-- avatar and name part -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/headTanggal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tanggal"/>

                    <TextView
                        android:id="@+id/headJumlah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/headTanggal"
                        android:layout_marginStart="50dp"
                        android:text="@string/jumlah"/>

                    <TextView
                        android:id="@+id/headKet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/headJumlah"
                        android:layout_marginStart="50dp"
                        android:text="@string/keterangan"/>

                </RelativeLayout>

                <!-- divider line -->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="9dp"
                    android:src="@color/contentDividerLine" />

                <!-- addresses part -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/tidak_ada_riwayat"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>
