<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="dataItem"
            type="com.example.lelangonline.models.DataItem" />

        <variable
            name="viewModel"
            type="com.example.lelangonline.ui.home.HomeViewModel" />

        <variable
            name="position"
            type="Integer" />

        <variable
            name="avatarUrl"
            type="String" />

        <variable
            name="reqManager"
            type="com.bumptech.glide.RequestManager" />
    </data>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:shapeAppearance="@style/ShapeAppearance.CardInfo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <!-- LEFT TITLE PART -->
            <ImageView
                android:id="@+id/avatar"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_weight="4"
                loadImage="@{avatarUrl}"
                reqManager="@{reqManager}"
                android:contentDescription="@string/avatart"/>

            <!-- RIGHT TITLE PART -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:paddingBottom="0dp"
                android:paddingEnd="0dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingStart="0dp"
                android:paddingTop="0dp">

                <ImageView
                    android:id="@+id/title_from_to_dots"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/from_to_purple" />

                <TextView
                    android:id="@+id/setor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/title_from_to_dots"
                    android:layout_marginStart="20dp"
                    android:text="@string/setor"
                    android:layout_toEndOf="@+id/title_from_to_dots"
                    android:ellipsize="marquee"
                    android:textStyle="bold"
                    android:fadingEdge="horizontal"
                    android:singleLine="true"
                    android:textColor="#99000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tarik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="31dp"
                    android:layout_toEndOf="@id/setor"
                    android:text="@string/tarik"
                    android:textColor="#99000000"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/saldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="31dp"
                    android:layout_toEndOf="@id/tarik"
                    android:text="@string/saldo"
                    android:textColor="#99000000"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/jmlh_saldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_below="@+id/saldo"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/TarikImg"
                    android:text="@string/rp_999_999_999"
                    android:textSize="14sp"
                    android:textColor="#99000000"
                    android:textStyle="bold"/>

                <ImageButton
                    android:id="@+id/setorImg"
                    android:layout_width="43dp"
                    android:layout_height="43dp"
                    android:layout_below="@+id/setor"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/title_from_to_dots"
                    android:background="@drawable/wallet_1" />

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/setorImg"
                    android:layout_marginStart="10dp"
                    android:src="@color/contentDividerLine" />


                <ImageButton
                    android:id="@+id/TarikImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tarik"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/setorImg"
                    android:background="@drawable/credit_card" />

                <LinearLayout
                    android:id="@+id/openCell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/jmlh_saldo"
                    android:layout_marginTop="25dp"
                    android:layout_toEndOf="@id/TarikImg"
                    android:layout_marginStart="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ED000000"
                        android:text="@string/riwayat"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/down_arrow"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
